# flaskBlog

./: app.py  article_data.py  pyproject.toml
templates/: about.html  articles.html  home.html  layout.html  register.html
templates/includes/: _navbar.html
