[tool.poetry]
name = "flaskblog"
version = "0.1.0"
description = ""
authors = ["tunmie <victoroluwasomidotun@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
Flask-MySQLdb = "^1.0.1"
Flask-WTF = "^1.0.1"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
